[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Levels/Primrose/rotation_disabler.gd" type="Script" id=1]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossSpecials/FlameBurner/Flame_Hitbox.gd" type="Script" id=2]
[ext_resource path="res://src/Sounds/MMX - Enemy Helmet Hit.ogg" type="AudioStream" id=3]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossSpecials/FlameBurner/burn_effects.tres" type="SpriteFrames" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 13 )

[sub_resource type="CircleShape2D" id=4]
radius = 24.0

[node name="FlameBurner" type="KinematicBody2D" groups=["Player Projectile"]]
z_index = 6
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )
damage_to_bosses = 0.5
damage_to_weakness = 10.0

[node name="animatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
frames = ExtResource( 4 )
animation = "small_flame"
frame = 9

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 3 )

[node name="disabler" type="Node" parent="."]
script = ExtResource( 1 )
fade_out = true
delete_after_fade = true
queue_free = true
undo_on_rotation_end = false

[node name="deflectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 24

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 4 )

[connection signal="area_entered" from="area2D" to="." method="_on_area2D_body_entered"]
[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
